# actix-opentelemetry

./: readme.md
playlist-service/: Cargo.toml
playlist-service/config/: configuration.yml
playlist-service/deployment/: configmap.yaml  deployment-jaeger.yaml  deployment.yaml  namespace.yaml  service-jaeger.yaml  service.yaml
playlist-service/docker/: Dockerfile  configuration.yml
playlist-service/src/: configuration.rs  main.rs  model.rs
video-service/: Cargo.toml
video-service/config/: configuration.yml
video-service/deployment/: configmap.yaml  deployment.yaml  service.yaml
video-service/docker/: Dockerfile  configuration.yml
video-service/src/: configuration.rs  main.rs
