[package]
name = "playlist-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-opentelemetry = { version = "0.12.0", features = ["metrics"] }
anyhow = "1.0.58"
futures = "0.3.21"
opentelemetry = { version = "0.17.0", features = ["metrics","tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["tokio", "reqwest_collector_client"] }
opentelemetry-prometheus = "0.10.0"
reqwest = { version = "0.11.11", features = ["json"] }
reqwest-middleware = "0.1.6"
reqwest-tracing = { version = "0.3.0", features = ["opentelemetry_0_17"] }
serde = { version = "1.0.139", features = ["derive"] }
tracing = "0.1.35"
tracing-bunyan-formatter = "0.3.3"
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
config = "0.13.1"
